<resources>
    <string name="app_name">HEALTH CONDITION</string>
    <string name="start_test">ROZPOCZNIJ TEST</string>
    <string name="return_button">POWRÓT</string>
    <string name="settings">USTAWIENIA</string>
    <string name="check_sensors">Sprawdź sensory</string>
    <string name="health_condition_application">Health Condition Application</string>
    <string name="gravity_sensor">CZUJNIK GRAWITACJI</string>
    <string name="gravity_x">Force of gravity along the x axis.</string>
    <string name="gravity_y">Force of gravity along the y axis.</string>
    <string name="gravity_z">Force of gravity along the z axis.</string>
    <string name="linear_accelerometer">PRZYŚPIESZENIE LINIOWE</string>
    <string name="linear_accelerometer_x">Acceleration force along the x axis (excluding  gravity).</string>
    <string name="linear_accelerometer_y">Acceleration force along the y axis (excluding  gravity).</string>
    <string name="linear_accelerometer_z">Acceleration force along the z axis (excluding  gravity).</string>
    <string name="rotation_vector_sensor">CZUJNIK POŁOŻENIA KĄTOWEGO</string>
    <string name="rotation_vector_x">Rotation vector component along the x axis (x * sin(θ/2)).</string>
    <string name="rotation_vector_y">Rotation vector component along the y axis (y * sin(θ/2)).</string>
    <string name="rotation_vector_z">Rotation vector component along the z axis (z * sin(θ/2)).</string>
    <string name="rotation_vector_scalar_component">Scalar component of the rotation vector (cos(θ/2).</string>
    <string name="accelerometer">PRZYŚPIESZENIE</string>
    <string name="accelerometer_x">Acceleration force along the x axis (including gravity).</string>
    <string name="accelerometer_y">Acceleration force along the y axis (including gravity).</string>
    <string name="accelerometer_z">Acceleration force along the z axis (including gravity).</string>
    <string name="gyroscope">ŻYROSKOP</string>
    <string name="gyroscope_x">Rate of rotation around the x axis.</string>
    <string name="gyroscope_y">Rate of rotation around the y axis.</string>
    <string name="gyroscope_z">Rate of rotation around the z axis.</string>
    <string name="no_sensor_available">Sensor nie jest dostępny!</string>
    <string name="check_db_connection">Sprawdź połączenie</string>
    <string name="start_test_header">Wprowadzenie</string>
    <string name="start_test_description">Za chwilę rozpoczniesz serię pięciu zadań. Test nie zajmie więcej niż 5 minut. Gdy będziesz gotowy naciśnij przycisk poniżej.</string>
    <string name="start_test_button">Rozpocznij test</string>
    <string name="test_one_header">Pomiar przyśpieszenia oraz drgań</string>
    <string name="test_one_description">Zegnij rękę o kąt 90° trzymając smartfon w ręce tak jak pokazano na obrazku</string>
    <string name="action_settings">Ustawienia</string>
    <string name="task_one">Zadanie 1</string>
    <string name="test_one_test_start">Rozpoczęto pomiar</string>
    <string name="test_one_data_check">Sprawdzanie poprawności danych</string>
    <string name="test_two_header">Pomiar dokładności i szybkości</string>
    <string name="test_two">Zadanie 2</string>
    <string name="test_two_description">Postaraj się jak najszybciej i najdokładniej narysować palcem na ekranie przedstawiony kształt</string>
    <string name="test_two_button">START</string>
    <string name="test_two_timer">Czas:</string>
    <string name="test_two_test_description">Podczas rysowania nie\nodrywaj palca od ekranu.\nZacznij rysowanie od środka spirali kiedy będziesz gotowy.\nW razie problemów powtórz test.</string>
    <string name="test_two_repeat_button">POWTÓRZ</string>
    <string name="test_two_next_button">DALEJ</string>
    <string name="test_three_header">Koordynacja oko - ręka</string>
    <string name="test_three">Zadanie 3</string>
    <string name="test_three_description">Na ekranie pojawi się kilka okręgów. Przeciągnij palcem czerwoną kropkę na wszystkie okręgi w jak najkrótszym czasie.</string>
    <string name="test_three_button">START</string>
    <string name="test_three_repeat_button">POWTÓRZ</string>
    <string name="test_three_next_button">DALEJ</string>
    <string name="test_three_time">Czas:</string>
    <string name="test_four_header">Koordynacja oko - ręka</string>
    <string name="test_four">Zadanie 4</string>
    <string name="test_four_description">To zadanie jest podobne do poprzedniego. Kropki będą pojawiały się po kolei.\nPrzeciągnij palcem czerwoną kropkę na okrąg\nw jak najkrótszym czasie.</string>
    <string name="test_four_button">START</string>
    <string name="test_five_header">Test skojarzeń</string>
    <string name="test_five">Zadanie 5</string>
    <string name="test_five_description">Przeczytaj uważnie pytania i zaznacz poprawną odpowiedź.</string>
    <string name="test_five_button">START</string>
    <string name="test_five_question">Na rysunku znajduje się:</string>
    <string name="result_header">Dziękujemy za wypełnienie testu!</string>
    <string name="result_description">Zanim zakończysz zaznacz jedno z poniższych zdań:</string>
    <string name="result_button">ZAKOŃCZ</string>
    <string name="a">a. </string>
    <string name="b">b. </string>
    <string name="c">c. </string>
    <string name="final_text_one">Cierpię na chorobę neurodegeneracyjną lub\nmiaem w przeszłości uraz neurologiczny.</string>
    <string name="final_text_two">Nie miałem w przeszłości\nżadnych urazów\nneurologicznych.</string>
</resources>
