<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    android:layout_height="match_parent"
    tools:context=".StartTestActivity">
    <TextView
        style="@style/Header1"
        android:text="@string/start_test"/>
    <TextView
        style="@style/Header1"
        android:layout_weight="1"
        android:text="@string/start_test_description"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/startTestButton"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@style/ButtonStyle"
            android:text="@string/start_test_button"/>
    </RelativeLayout>
    <Button
        android:id="@+id/returnButton"
        style="@style/ReturnButton"
        android:text="@string/return_button" />
</LinearLayout>