<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    android:layout_height="match_parent"
    tools:context=".GoToTestFive">
    <TextView
        android:layout_marginTop="50dp"
        style="@style/Header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_five_header"/>
    <LinearLayout
        style="@style/BoxLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            android:layout_margin="20dp">
            <TextView
                style="@style/Header2"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_five"/>
            <TextView
                style="@style/Header2"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_five_description"/>
        </LinearLayout>
        <Button
            android:layout_margin="70dp"
            android:id="@+id/testFiveStartButton"
            style="@style/StartButtonStyle"
            android:layout_width="200dp"
            android:background="@drawable/startbutton"
            android:text="@string/test_five_button"/>
    </LinearLayout>
</LinearLayout>