<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    android:layout_height="match_parent"
    tools:context=".TestFive">
    <LinearLayout
        style="@style/BoxLayout"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/testFiveImage"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        style="@style/BoxLayout"
        android:paddingTop="25dp"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/Header2"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_five_question"
            android:layout_margin="25dp"/>
        <LinearLayout
            android:id="@+id/testFiveButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/WhiteBoxNoPaddingMargin"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp">
            <TextView
                style="@style/Header2"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"/>
            <TextView
                style="@style/Header2"
                android:id="@+id/testFiveAnswerA"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/testFiveButtonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/WhiteBoxNoPaddingMargin"
            android:layout_margin="25dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp">
            <TextView
                style="@style/Header2"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"/>
            <TextView
                style="@style/Header2"
                android:id="@+id/testFiveAnswerB"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/testFiveButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WhiteBoxNoPaddingMargin"
            android:orientation="horizontal"
            android:layout_marginHorizontal="25dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp">
            <TextView
                style="@style/Header2"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"/>
            <TextView
                style="@style/Header2"
                android:id="@+id/testFiveAnswerC"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>